--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
   <!-- Custom styles for this template -->
   <link href="App.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow+Semi+Condensed&family=Open+Sans+Condensed:wght@300&family=PT+Sans:wght@700&family=Ubuntu+Condensed&display=swap" rel="stylesheet"> 
 
 </head>
 
