--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <a href="#"><img class="card-img-top" src="images/talomalli-1.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="talomalli_1.html">Talomalli 1</a>
+              <a href="talomalli_1.html">Doomi 1</a>
             </h4>
             <p class="card-text">Tämä koti on oikea tilaihme. Tehokkaasti suunniteltu pohjaratkaisu antaa mahdollisuuksia monenlaiseen asumiseen ja harrastustoimintaan.</p>
           </div>
@@ -119,7 +119,7 @@
           <a href="#"><img class="card-img-top" src="images/talomalli-2.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="talomalli_2.html">Talomalli 2</a>
+              <a href="talomalli_2.html">Doomi 2</a>
             </h4>
             <p class="card-text">Tässä talossa on mietitty kaikki neliöt toimivaksi kokonaisuudeksi. Keittiö ja olohuone ovat yhtenäistä avointa tilaa.</p>
           </div>
@@ -130,7 +130,7 @@
           <a href="#"><img class="card-img-top" src="images/talomalli-3.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="talomalli_3.html">Talomalli 3</a>
+              <a href="talomalli_3.html">Doomi 3</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
           </div>
