--- a/mallisto.html
+++ b/mallisto.html
@@ -93,7 +93,7 @@
           <a href="talomalli_1.html"><img class="card-img-top hover-shadow cursor" src="images/talomalli-1.png" alt="" onclick="openModal();currentSlide(1)"></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="talomalli_1.html">Talomalli 1</a>
+              <a href="talomalli_1.html">Doomi 1</a>
             </h4>
             <p class="card-text">Tämä koti on oikea tilaihme. Tehokkaasti suunniteltu pohjaratkaisu antaa mahdollisuuksia monenlaiseen asumiseen ja harrastustoimintaan.</p>
             <p style="size: 1px;"></p>
@@ -108,7 +108,7 @@
           <a href="talomalli_2.html"><img class="card-img-top" src="images/talomalli-2.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="talomalli_2.html">Talomalli 2</a>
+              <a href="talomalli_2.html">Doomi 2</a>
             </h4>
             <p class="card-text">Tässä talossa on mietitty kaikki neliöt toimivaksi kokonaisuudeksi. Keittiö ja olohuone ovat yhtenäistä avointa tilaa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
             <p style="size: 1px;"></p>
@@ -123,7 +123,7 @@
           <a href="talomalli_3.html"><img class="card-img-top" src="images/talomalli-3.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="talomalli_3.html">Talomalli 3</a>
+              <a href="talomalli_3.html">Doomi 3</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
             <p style="size: 1px;"></p>
@@ -138,7 +138,7 @@
           <a href="talomalli_4.html"><img class="card-img-top" src="images/talomalli-4.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="talomalli_4.html">Talomalli 4</a>
+              <a href="talomalli_4.html">Doomi 4</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             <p style="size: 1px;"></p>
@@ -153,7 +153,7 @@
           <a href="talomalli_5.html"><img class="card-img-top" src="images/talomalli-5.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="talomalli_5.html">Talomalli 5</a>
+              <a href="talomalli_5.html">Doomi 5</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             <p style="size: 1px;"></p>
@@ -168,7 +168,7 @@
           <a href="talomalli_6.html"><img class="card-img-top" src="images/talomalli-6.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="talomalli_6.html">Talomalli 6</a>
+              <a href="talomalli_6.html">Doomi 6</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
             <p style="size: 1px;"></p>
