--- a/talomalli_1.html
+++ b/talomalli_1.html
@@ -60,7 +60,7 @@
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active" style="background-image: url('images/livingroom.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Talomalli 1</h3>
+            <h3>Doomi 1</h3>
             <p>Lorem ipsum dolor</p>
           </div>
         </div>
@@ -75,7 +75,7 @@
     <h1 class="mt-4 mb-3">
       <small></small>
     </h1>
-    <h2>Talomalli 1</h2>  
+    <h2>Doomi 1</h2>  
     
     <div class="row">
       <div class="col-lg-6">
