--- a/talomalli_5.html
+++ b/talomalli_5.html
@@ -60,7 +60,7 @@
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active" style="background-image: url('images/livingroom.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Talomalli 5</h3>
+            <h3>Doomi 5</h3>
             <p>Lorem ipsum dolor</p>
           </div>
         </div>
@@ -76,7 +76,7 @@
       <small></small>
     </h1>
 
-    <h2>Talomalli 5</h2>  
+    <h2>Doomi 5</h2>  
     
     <div class="row">
       <div class="col-lg-6">
