Footer & Navbar effect

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
   <!-- Custom styles for this template -->
   <link href="App.css" rel="stylesheet">
+  <link href="LineIcons.css" rel="stylesheet">
+  <link href="Magnific-popup.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow+Semi+Condensed&family=Open+Sans+Condensed:wght@300&family=PT+Sans:wght@700&family=Ubuntu+Condensed&display=swap" rel="stylesheet"> 
+  <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
 
 </head>
 
@@ -63,8 +66,8 @@
         <div class="carousel-item active" style="background-image: url('images/moduulitalo-1.png')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Mallisto</h3>
-            <p>Löydä unelmiesi koti valmiista talomalleista</p>
-          </div>
+            <p>Löydä unelmiesi koti valmiista talomalleista</p>            
+          </div> 
         </div>
         <!-- Slide Two-->
         <div class="carousel-item" style="background-image: url('images/yrityksille-1.png')">
@@ -72,8 +75,8 @@
             <h3>Yrityksille</h3>
             <p>Vaivattomasti lisää majoitustilaa</p>
           </div>
-        </div>
-      </div>
+        </div>       
+      </div> 
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -81,7 +84,7 @@
       <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
-      </a>
+      </a>      
     </div>
   </header>
 
@@ -105,7 +108,7 @@
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="images/talomalli-1.png" alt=""></a>
+          <a href="talomalli_1.html"><img class="card-img-top" src="images/talomalli-1.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="talomalli_1.html">Doomi 1</a>
@@ -116,7 +119,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="images/talomalli-2.png" alt=""></a>
+          <a href="talomalli_2.html"><img class="card-img-top" src="images/talomalli-2.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="talomalli_2.html">Doomi 2</a>
@@ -127,7 +130,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="images/talomalli-3.png" alt=""></a>
+          <a href="talomalli_3.html"><img class="card-img-top" src="images/talomalli-3.png" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="talomalli_3.html">Doomi 3</a>
@@ -153,17 +156,51 @@
   </div>
 
 
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div><a href="index.html"><img class="rounded mx-auto d-block logo-img-bottom" src="images/doomi-valkoinen-logo.png" alt=""></a></div>
-    <div class="container">      
-      <p class="m-0 text-center text-white">&copy; Doomi 2021</p>
-    </div>    
-  </footer>
+  <!--====== FOOTER START ======-->
+
+  <footer id="footer" class="footer-area">
+    <div class="footer-widget pt-130 pb-130">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="footer-content text-center">
+                      <a href="index.html">
+                        <img class="rounded text-center mx-auto d-block logo-img-bottom" src="images/doomi-valkoinen-logo.png" alt="">
+                      </a>
+                        <p class="mt-">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci- didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exe- rcitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <ul>
+                          <li><a href="https://www.linkedin.com/in/minnasydanmetsa/" target="_blank"><i class="lni-linkedin-original"></i></a></li>
+                          <li><a href="https://twitter.com/minnasydan" target="_blank"><i class="lni-twitter-original"></i></a></li>
+                          <li><a href="https://fi.pinterest.com/minnasydan/_saved/" target="_blank"><i class="lni-pinterest"></i></a></li>
+                          <li><a href="https://www.facebook.com/minna.sydanmetsa" target="_blank"><i class="lni-facebook-filled"></i></a></li>
+                          <li><a href="https://www.instagram.com/minnasydan/" target="_blank"><i class="lni-instagram-filled"></i></a></li>
+                        </ul>
+                    </div> <!-- footer content -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </div> <!-- footer widget -->
+    <div class="footer-copyright pb-20">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="copyright-text text-center pt-20">
+                        <p><a href="http://minnasydan.fi/" rel="nofollow">&copy; Doomi 2021</a></p>
+                    </div> <!-- copyright text -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </div> <!-- footer widget -->
+</footer>
+
+<!--====== FOOTER ENDS ======-->
 
   <!-- Bootstrap core JavaScript -->
   <script src="jquery/jquery.min.js"></script>
   <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!--====== Magnific Popup js ======-->
+  <script src="js/jquery.magnific-popup.min.js"></script>
 
 </body>
 
