--- a/talomalli_6.html
+++ b/talomalli_6.html
@@ -15,8 +15,11 @@
 
   <!-- Custom styles for this template -->
   <link href="App.css" rel="stylesheet">
+  <link href="LineIcons.css" rel="stylesheet">
+  <link href="Magnific-popup.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow+Semi+Condensed&family=Open+Sans+Condensed:wght@300&family=PT+Sans:wght@700&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow+Semi+Condensed&family=Open+Sans+Condensed:wght@300&family=PT+Sans:wght@700&family=Ubuntu+Condensed&display=swap" rel="stylesheet"> 
+  <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
 
 </head>
 
@@ -129,18 +132,51 @@
 
   </div>
 
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div><a href="index.html"><img class="rounded mx-auto d-block logo-img-bottom" src="images/doomi-valkoinen-logo.png" alt=""></a></div>
-    <div class="container">      
-      <p class="m-0 text-center text-white">&copy; Doomi 2021</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+  <!--====== FOOTER START ======-->
+
+  <footer id="footer" class="footer-area">
+    <div class="footer-widget pt-130 pb-130">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="footer-content text-center">
+                      <a href="index.html">
+                        <img class="rounded text-center mx-auto d-block logo-img-bottom" src="images/doomi-valkoinen-logo.png" alt="">
+                      </a>
+                        <p class="mt-">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci- didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exe- rcitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <ul>
+                            <li><a href="https://www.linkedin.com/in/minnasydanmetsa/" target="_blank"><i class="lni-linkedin-original"></i></a></li>
+                            <li><a href="https://twitter.com/minnasydan" target="_blank"><i class="lni-twitter-original"></i></a></li>
+                            <li><a href="https://fi.pinterest.com/minnasydan/_saved/" target="_blank"><i class="lni-pinterest"></i></a></li>
+                            <li><a href="https://www.facebook.com/minna.sydanmetsa" target="_blank"><i class="lni-facebook-filled"></i></a></li>
+                            <li><a href="https://www.instagram.com/minnasydan/" target="_blank"><i class="lni-instagram-filled"></i></a></li>
+                        </ul>
+                    </div> <!-- footer content -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </div> <!-- footer widget -->
+    <div class="footer-copyright pb-20">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="copyright-text text-center pt-20">
+                        <p><a href="http://minnasydan.fi/" rel="nofollow">&copy; Doomi 2021</a></p>
+                    </div> <!-- copyright text -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </div> <!-- footer widget -->
+</footer>
+
+<!--====== FOOTER ENDS ======-->
 
   <!-- Bootstrap core JavaScript -->
   <script src="jquery.min.js"></script>
   <script src="bootstrap.bundle.min.js"></script>
+
+  <!--====== Magnific Popup js ======-->
+  <script src="js/jquery.magnific-popup.min.js"></script>
 
 </body>
 
