--- a/talomalli_2.html
+++ b/talomalli_2.html
@@ -56,10 +56,10 @@
 
   <header>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
+      <!-- <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      </ol>
+      </ol> -->
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active" style="background-image: url('images/livingroom2.jpg')">
           <div class="carousel-caption d-none d-md-block">
